[package]
name = "fluid"
version = "0.1.0"
authors = ["dangu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpu = { git = "https://github.com/notdanilo/gpu" }
nalgebra = "0.22.0"
rand = "0.7.3"
uuid = { version = "0.8.1", features = [ "v4" ] }

[dev-dependencies]
